// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LineChart /> handles data input format error 1`] = `
<svg
  class="sc-gzVnrw fgSTpW sc-bdVaJa jgDyUg"
  height="320"
  width="960"
>
  <rect
    class="background"
    height="320"
    width="960"
  />
  <g
    class="arealine-sc-EHOje kSzTaY"
  >
    <text>
      Input Data Format Error
    </text>
    <text>
      Input Data Format Error
    </text>
  </g>
  <g
    class="xaxis-sc-bwzfXH fjjIqd"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0,320)"
  >
    <text
      class="axisName"
      transform="translate(480, 30)"
    />
    <path
      class="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(480,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      />
    </g>
  </g>
  <g
    class="yaxis-sc-htpNat jpKklr"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
  >
    <text
      class="axisName"
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      class="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        40
      </text>
    </g>
  </g>
</svg>
`;

exports[`<LineChart /> renders linear data 1`] = `
<svg
  class="sc-gzVnrw fgSTpW sc-bdVaJa jgDyUg"
  height="320"
  width="960"
>
  <rect
    class="background"
    height="320"
    width="960"
  />
  <g
    class="arealine-sc-EHOje kSzTaY"
  >
    <path
      class="line-sc-bxivhb eWgptY"
      d="M0,260L96,120L384,253.33333333333331L480,53.333333333333314L960,120"
    />
    <path
      class="area-sc-ifAKCX jATdPh"
      d="M0,260L96,120L384,253.33333333333331L480,53.333333333333314L960,120L960,320L480,320L384,320L96,320L0,320Z"
    />
  </g>
  <g
    class="xaxis-sc-bwzfXH fjjIqd"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0,320)"
  >
    <text
      class="axisName"
      transform="translate(480, 30)"
    />
    <path
      class="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(96.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(192.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(288.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(384.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(480.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(576.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(672.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(768.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(864.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(960.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        100
      </text>
    </g>
  </g>
  <g
    class="yaxis-sc-htpNat jpKklr"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
  >
    <text
      class="axisName"
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      class="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        40
      </text>
    </g>
  </g>
</svg>
`;

exports[`<LineChart /> renders time series data of moment date object 1`] = `
<svg
  class="sc-gzVnrw fgSTpW sc-bdVaJa jgDyUg"
  height="320"
  width="960"
>
  <rect
    class="background"
    height="320"
    width="960"
  />
  <g
    class="arealine-sc-EHOje kSzTaY"
  >
    <path
      class="line-sc-bxivhb eWgptY"
      d="M0,120L433.5483870967742,186.66666666666666L960,53.333333333333314"
    />
    <path
      class="area-sc-ifAKCX jATdPh"
      d="M0,120L433.5483870967742,186.66666666666666L960,53.333333333333314L960,320L433.5483870967742,320L0,320Z"
    />
  </g>
  <g
    class="xaxis-sc-bwzfXH fjjIqd"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0,320)"
  >
    <text
      class="axisName"
      transform="translate(480, 30)"
    />
    <path
      class="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        2017
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(62.435483870967744,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Tue 03
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(124.37096774193549,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Thu 05
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(186.30645161290323,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Sat 07
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(248.24193548387098,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Mon 09
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(310.1774193548387,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Wed 11
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(372.11290322580646,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Fri 13
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(434.0483870967742,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Jan 15
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(495.98387096774195,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Tue 17
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(557.9193548387098,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Thu 19
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(619.8548387096774,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Sat 21
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(681.7903225806452,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Mon 23
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(743.7258064516129,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Wed 25
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(805.6612903225807,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Fri 27
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(867.5967741935484,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Jan 29
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(929.5322580645161,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Tue 31
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(960.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        February
      </text>
    </g>
  </g>
  <g
    class="yaxis-sc-htpNat jpKklr"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
  >
    <text
      class="axisName"
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      class="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        40
      </text>
    </g>
  </g>
</svg>
`;

exports[`<LineChart /> renders time series data of native date object 1`] = `
<svg
  class="sc-gzVnrw fgSTpW sc-bdVaJa jgDyUg"
  height="320"
  width="960"
>
  <rect
    class="background"
    height="320"
    width="960"
  />
  <g
    class="arealine-sc-EHOje kSzTaY"
  >
    <path
      class="line-sc-bxivhb eWgptY"
      d="M0,120L433.5483870967742,186.66666666666666L960,53.333333333333314"
    />
    <path
      class="area-sc-ifAKCX jATdPh"
      d="M0,120L433.5483870967742,186.66666666666666L960,53.333333333333314L960,320L433.5483870967742,320L0,320Z"
    />
  </g>
  <g
    class="xaxis-sc-bwzfXH fjjIqd"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0,320)"
  >
    <text
      class="axisName"
      transform="translate(480, 30)"
    />
    <path
      class="domain"
      d="M0.5,0V0.5H960.5V0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        2017
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(62.435483870967744,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Tue 03
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(124.37096774193549,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Thu 05
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(186.30645161290323,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Sat 07
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(248.24193548387098,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Mon 09
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(310.1774193548387,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Wed 11
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(372.11290322580646,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Fri 13
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(434.0483870967742,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Jan 15
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(495.98387096774195,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Tue 17
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(557.9193548387098,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Thu 19
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(619.8548387096774,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Sat 21
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(681.7903225806452,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Mon 23
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(743.7258064516129,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Wed 25
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(805.6612903225807,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Fri 27
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(867.5967741935484,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Jan 29
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(929.5322580645161,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        Tue 31
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(960.5,0)"
    >
      <line
        stroke="#000"
        y2="0"
      />
      <text
        dy="0.71em"
        fill="#000"
        y="8"
      >
        February
      </text>
    </g>
  </g>
  <g
    class="yaxis-sc-htpNat jpKklr"
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
  >
    <text
      class="axisName"
      transform="translate(-25, 160) rotate(270)"
    />
    <path
      class="domain"
      d="M0,320.5H0.5V0.5H0"
      stroke="#000"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,320.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,253.83333333333331)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,187.16666666666666)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,120.5)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,53.833333333333314)"
    >
      <line
        stroke="#000"
        x2="0"
      />
      <text
        dy="0.32em"
        fill="#000"
        x="-5"
      >
        40
      </text>
    </g>
  </g>
</svg>
`;
